# apprise

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: CI.yml  codeql-analysis.yml
crates/apprise-cli/: Cargo.toml
crates/apprise-cli/src/: cli.rs  main.rs
crates/apprise-core/: Cargo.toml
crates/apprise-core/src/: asset.rs  error.rs  lib.rs  types.rs
crates/apprise-core/src/attachment/: file.rs  http.rs  memory.rs  mod.rs
crates/apprise-core/src/config/: file.rs  http.rs  mod.rs  text.rs  yaml.rs
crates/apprise-core/src/notify/: africas_talking.rs  apprise_api.rs  aprs.rs  bark.rs  bluesky.rs  brevo.rs  bulksms.rs  bulkvs.rs  burstsms.rs  chanify.rs  clickatell.rs  clicksend.rs  custom_form.rs  custom_json.rs  custom_xml.rs  d7networks.rs  dapnet.rs  desktop.rs  dingtalk.rs  discord.rs  dot.rs  email.rs  emby.rs  enigma2.rs  fcm.rs  feishu.rs  flock.rs  fluxer.rs  fortysixelks.rs  freemobile.rs  google_chat.rs  gotify.rs  growl.rs  guilded.rs  home_assistant.rs  httpsms.rs  ifttt.rs  irc.rs  jellyfin.rs  join.rs  (+89 more)
crates/apprise-core/src/storage/: mod.rs
crates/apprise-core/src/utils/: aws.rs  base64.rs  cwe312.rs  disk.rs  emoji.rs  escape.rs  format.rs  locale.rs  mod.rs  parse.rs  pem.rs  pgp.rs  sanitize.rs  socket.rs  templates.rs  time.rs  validate.rs
crates/apprise-napi/: Cargo.toml  apprise.wasi-browser.js  apprise.wasi.cjs  browser.js  index.d.ts  index.js  package.json
crates/apprise-napi/__test__/: index.spec.ts  index.test.mjs
crates/apprise-napi/src/: lib.rs
src/: asset.rs  error.rs  main.rs  types.rs
src/attachment/: file.rs  http.rs  mod.rs
src/config/: file.rs  http.rs  mod.rs  text.rs  yaml.rs
src/notify/: africas_talking.rs  apprise_api.rs  aprs.rs  bark.rs  bluesky.rs  brevo.rs  bulksms.rs  bulkvs.rs  burstsms.rs  chanify.rs  clickatell.rs  clicksend.rs  custom_form.rs  custom_json.rs  custom_xml.rs  d7networks.rs  dapnet.rs  desktop.rs  dingtalk.rs  discord.rs  dot.rs  email.rs  emby.rs  enigma2.rs  fcm.rs  feishu.rs  flock.rs  fluxer.rs  form.rs  fortysixelks.rs  freemobile.rs  google_chat.rs  gotify.rs  growl.rs  guilded.rs  home_assistant.rs  httpsms.rs  ifttt.rs  irc.rs  jellyfin.rs  (+92 more)
src/storage/: mod.rs
src/utils/: aws.rs  base64.rs  disk.rs  emoji.rs  escape.rs  format.rs  mod.rs  parse.rs  pgp.rs  sanitize.rs  socket.rs  templates.rs  time.rs
