[package]
name = "apprise"
version = "1.9.8"
edition = "2021"
description = "Push notifications that work with everything - single Rust binary"
license = "MIT"

[[bin]]
name = "apprise"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime — only the features we actually use
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "fs"] }

# HTTP client — drop multipart and stream (unused)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }

# URL parsing
url = "2"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# Error handling
thiserror = "2"

# Encoding
base64 = "0.22"

# System paths
dirs = "5"

# Random
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# URL / percent encoding (percent-encoding removed — urlencoding covers all uses)
urlencoding = "2"

# Cryptographic primitives (AWS Signature v4, OAuth1)
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"

# Timezone handling (IANA timezone database)
chrono-tz = "0.10"

# Platform-specific socket options (keepalive)
libc = "0.2"

# TLS for raw TCP plugins (IRC, XMPP)
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"

# MQTT (optional — omit with --no-default-features or -F without mqtt)
rumqttc = { version = "0.24", features = ["use-rustls"], optional = true }

# Desktop notifications (optional, feature-gated)
notify-rust = { version = "4", optional = true }

[features]
default = ["mqtt", "email", "yaml"]

# Pull in the MQTT broker client (rumqttc + its ICU / zerocopy tree)
mqtt = ["dep:rumqttc"]

# Pull in the SMTP email transport (lettre + nom)
email = ["dep:lettre"]

# Pull in YAML config-file parsing (serde_yaml / unsafe-libyaml)
yaml = ["dep:serde_yaml"]

# Desktop pop-up notifications (platform-specific)
desktop = ["dep:notify-rust"]

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
