[workspace]
members = ["crates/apprise-core", "crates/apprise-cli", "crates/apprise-napi"]
resolver = "2"

[workspace.package]
version = "1.9.8"
edition = "2024"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "fs"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart", "form", "query"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9" }

# URL parsing
url = "2"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "ansi"] }

# Error handling
thiserror = "2"

# Encoding
base64 = "0.22"

# System paths
dirs = "6"

# Random
rand = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# URL encoding
urlencoding = "2"

# Cryptographic primitives
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"

# Platform socket options
libc = "0.2"

# TLS for raw TCP plugins (IRC, XMPP)
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
webpki-roots = "1"

# MQTT (optional)
rumqttc = { version = "0.25", features = ["use-rustls"] }

# Desktop notifications (optional)
notify-rust = { version = "4" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Internal crate
apprise-core = { path = "crates/apprise-core" }

# Dev dependencies
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
