[package]
name = "apprise-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Push notifications that work with everything — CLI"

[[bin]]
name = "apprise"
path = "src/main.rs"

[dependencies]
apprise-core.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
dirs.workspace = true

[features]
default = ["apprise-core/default"]
mqtt = ["apprise-core/mqtt"]
email = ["apprise-core/email"]
yaml = ["apprise-core/yaml"]
desktop = ["apprise-core/desktop"]
