[package]
name = "apprise-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Push notifications that work with everything — core library"

[lib]
name = "apprise_core"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = { workspace = true, optional = true }
url.workspace = true
lettre = { workspace = true, optional = true }
tracing.workspace = true
thiserror.workspace = true
base64.workspace = true
dirs.workspace = true
rand.workspace = true
chrono.workspace = true
async-trait.workspace = true
urlencoding.workspace = true
hmac.workspace = true
sha2.workspace = true
sha1.workspace = true
hex.workspace = true
libc.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
rumqttc = { workspace = true, optional = true }
notify-rust = { workspace = true, optional = true }
tracing-subscriber.workspace = true

[features]
default = ["mqtt", "email", "yaml"]
mqtt = ["dep:rumqttc"]
email = ["dep:lettre"]
yaml = ["dep:serde_yaml"]
desktop = ["dep:notify-rust"]

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
